fixed spacing and formating of input and save score button

--- a/style.css
+++ b/style.css
@@ -22,3 +22,8 @@ div.timer {
 .correct-answer, .incorrect-answer {
     margin-left: -20px !important;
 }
+
+.submit-score {
+    padding:5px;
+    margin-bottom: 20px;
+}
